Update content.mdx and metadata.ts

--- a/website/app/[locale]/(root)/docs/base-colors/content.mdx
+++ b/website/app/[locale]/(root)/docs/base-colors/content.mdx
@@ -85,7 +85,7 @@ Use `mcss bg:red` to create a nice-looking delete button.
         <div className='text:20 font:semibold fg:strong'>Delete Project</div>
         <div className='text:14 mt:1x'>The project will be permanently deleted, including its products and teams. <span className="fg:red font:medium">This action is irreversible and can not be undone.</span></div>
         <div className="flex justify-content:space-between mt:5x pt:5x bt:1|dashed|frame">
-            <p className="text:12 m:0">Learn more about the [disclaimer](#)</p>
+            <div className="text:12 m:0">Learn more about the [disclaimer](#)</div>
             <button className='bg:red font:14 font:semibold fg:white h:32 r:1x px:3x float:right'>Delete</button>
         </div>
     </DemoPanel>
