--- a/website/app/[locale]/(root)/docs/styles/content.mdx
+++ b/website/app/[locale]/(root)/docs/styles/content.mdx
@@ -1,17 +1,21 @@
-The composition of styles is similar to using syntax within `class=""`, with the difference that you can provide an abstract name for this set of classes and reuse it anywhere.
+## Introduction [sr-only]
 
-The styles utilizes `:where()` to reduce CSS specificity, allowing you to modify abstract classes using practical syntax without needing to add `!important` declarations:
+A style can be composed of multiple syntaxes, you can provide an abstract name for this set of classes and reuse it anywhere.
+
 ```html
-- <button class="btn bg:red!">Submit</button>
-<button class="btn **bg:red**">Submit</button>
+<button class="btn">Submit</button>
 ```
+
+Those styles adopt `mcss :where()` to reduce CSS specificity, allowing you to modify abstract classes using practical syntax without needing to add `mcss !important` declarations:
+
+This is just one of the abstract means. For React, Vue, and Svelte users, it's recommended to use the official [styled](https://github.com/master-co/styled) package.
 
 ---
 
 ## Basic usage
 ### Add a style
 Create an abstract style using Master CSS syntax.
-<Overview opened />
+<Overview />
 Master CSS shares the same CSS declarations for `css .inline-flex, .btn { ... }` through a selector list. This structural arrangement enhances browser rendering and enables selectors or media queries to be applied within the `config.styles`.
 
 ### Add a style with states
