--- a/website/app/[locale]/(root)/docs/responsive-design/content.mdx
+++ b/website/app/[locale]/(root)/docs/responsive-design/content.mdx
@@ -1,5 +1,3 @@
-import Default from '../queries/components/Default'
-
 ## Overview [sr-only]
 <ResizeZone width="100%" originX="center" showRuler>
     <IFrame src="/examples/responsive-gallery" height={360} />
@@ -11,11 +9,12 @@ The syntax in Master CSS allows for the conditional application of styles at dif
 
 This comprehensive coverage caters to the modern web layout scenario.
 <Default />
+To customize responsive breakpoints, see the [Queries](/docs/queries#add-a-responsive-breakpoint) documentation.
 
 ## Development strategies
 When it comes to designing and developing responsive web pages, [Mobile-first](#mobile-first) and [Desktop-first](#desktop-first) are two common development strategies. The decision between these two strategies depends on your project requirements, target audience, and operational decisions.
 
-However, thanks to the flexible syntax of Master CSS, we propose another flexible strategy － [Syntax-first](#syntax-first).
+Also, we propose another flexible strategy － [Syntax-first](#syntax-first).
 
 ### Mobile-first
 The Mobile-first development strategy is a design and development approach that initially focuses on designing and optimizing for smaller screen sizes, such as mobile phones and tablets, and then gradually expanding to larger screen sizes, including desktop computers.
