Update file paths in content.mdx

--- a/website/app/[locale]/(root)/docs/styles/content.mdx
+++ b/website/app/[locale]/(root)/docs/styles/content.mdx
@@ -76,7 +76,7 @@ project/
 |   `-- card.css.js
 `-- master.css.js
 ```
-Typically, frameworks or standard directory structures come with a `styles/` folder for CSS files, and we recommend placing your custom styles there with `styles/*.css.js`.
+Typically, frameworks or standard directory structures come with a "styles/" folder for CSS files, and we recommend placing your custom styles there with "styles/*.css.js".
 ```js name=styles/btn.css.js
 /** @type {import('@master/css').Config} */
 export default {
@@ -86,7 +86,7 @@ export default {
 }
 ```
 
-Extend `styles/btn.css.js` in `master.css.js`.
+Extend "styles/btn.css.js" in "master.css.js".
 
 ```js name=master.css.js
 /** @type {import('@master/css').Config} */
