Improve: Rename `config.themeDriver` to `config.modeDriver`

--- a/website/app/[locale]/(root)/docs/base-colors/content.mdx
+++ b/website/app/[locale]/(root)/docs/base-colors/content.mdx
@@ -26,7 +26,7 @@
 | <Bg className="bg:crimson" />`crimson`            | passionate, intense, powerful                                              |
 | <Bg className="bg:red" />`red`                    | bold, energetic, attention-grabbing                                        |
 
-By default, theme modes [drive](/docs/configuration#themedriver) base color variables meticulously adjusted in light and dark modes.
+By default, theme modes [drive](/docs/configuration#modedriver) base color variables meticulously adjusted in light and dark modes.
 <Demo $py={0} $px={0}>
     <DemoLight>
         <div className="bg:yellow aspect:2/1 size:full|12x r:1x"></div>
