--- a/website/app/[locale]/(root)/docs/colors/content.mdx
+++ b/website/app/[locale]/(root)/docs/colors/content.mdx
@@ -101,7 +101,7 @@ Using modes for variables, you can access a single source of truth and simplify 
         <Code lang="css" beautify>{require('!!raw-loader!./tests/add-colors-by-theme/generated.css').default}</Code>
     </div>
 </details>
-By default, theme variables [drive](/docs/configuration#themedriver) inheritance by adding `.light` or `.dark` to the parent element.
+By default, theme variables [drive](/docs/configuration#modedriver) inheritance by adding `.light` or `.dark` to the parent element.
 
 ### Override default colors
 (!) Access the same key as the preset to override default colors, like `blue-5` ~ `blue-95`.
