--- a/website/app/[locale]/(root)/docs/text-colors/content.mdx
+++ b/website/app/[locale]/(root)/docs/text-colors/content.mdx
@@ -30,7 +30,7 @@
 | <Aa className="fg:crimson" />`text-crimson`       | passionate, intense, powerful                                             |
 | <Aa className="fg:red" />`text-red`               | bold, energetic, attention-grabbing                                       |
 
-By default, theme modes [drive](/docs/configuration#themedriver) text variables meticulously adjusted in light and dark modes.
+By default, theme modes [drive](/docs/configuration#modedriver) text variables meticulously adjusted in light and dark modes.
 <Overview />
 [View the default variables on GitHub](https://github.com/master-co/css/blob/rc/packages/css/src/config/variables.ts)
 
