Improve: Rename `config.semantics` to `config.utilities` to prevent confusion with component classes

--- a/website/app/[locale]/(root)/docs/configuration/content.mdx
+++ b/website/app/[locale]/(root)/docs/configuration/content.mdx
@@ -1,6 +1,6 @@
 import RulesOverview from '../rules/components/Overview.mdx'
 import VariablesOverview from '../variables/components/Overview.mdx'
-import SemanticsOverview from '../semantics/components/Overview.mdx'
+import UtilitiesOverview from '../utilities/components/Overview.mdx'
 import KeyframesOverview from '../animations/components/Overview.mdx'
 import QueriesOverview from '../queries/components/Overview.mdx'
 import SelectorsOverview from '../selectors/components/Overview.mdx'
@@ -36,9 +36,9 @@ Customizing syntax [rules](/docs/rules) for your design system.
 Customizing [selectors](/docs/selectors) for your design system.
 <SelectorsOverview />
 
-### `.semantics`
-Customizing [semantic](/docs/semantic) classes for your design system.
-<SemanticsOverview />
+### `.utilities`
+Customizing [utility](/docs/utilities) classes for your design system.
+<UtilitiesOverview />
 
 ### `.styles`
 Customizing abstract [styles](/docs/styles) for your design system.
