--- a/website/app/[locale]/(root)/docs/introduction/components/Configuration.mdx
+++ b/website/app/[locale]/(root)/docs/introduction/components/Configuration.mdx
@@ -3,7 +3,7 @@ import functionsMetadata from '../../functions/metadata'
 import mediaQueriesMetadata from '../../queries/metadata'
 import rulesMetadata from '../../rules/metadata'
 import selectorsMetadata from '../../selectors/metadata'
-import semanticsMetadata from '../../semantics/metadata'
+import utilitiesMetadata from '../../utilities/metadata'
 import stylesMetadata from '../../styles/metadata'
 import variablesMetadata from '../../variables/metadata'
 
@@ -36,8 +36,8 @@ import variablesMetadata from '../../variables/metadata'
             <td>{selectorsMetadata.description}</td>
         </tr>
         <tr>
-            <th>[Semantics](/docs/semantics)</th>
-            <td>{semanticsMetadata.description}</td>
+            <th>[Utilities](/docs/utilities)</th>
+            <td>{utilitiesMetadata.description}</td>
         </tr>
         <tr>
             <th>[Styles](/docs/styles)</th>
