--- a/website/app/[locale]/(root)/docs/introduction/content.mdx
+++ b/website/app/[locale]/(root)/docs/introduction/content.mdx
@@ -60,7 +60,7 @@ We have built a series of neutral tokens in the default configuration and create
 <DesignVariables />
 This is just one part; more design variables and tokens are scattered throughout the syntax documentation.
 
-For example, the semantic class `capitalize` is used to simplify `css text-transform: capitalize`:
+For example, the utility class `capitalize` is used to simplify `css text-transform: capitalize`:
 <Demo $py={0}>
     <DemoPanel>
         <DemoP><b className="bg:stripe-pink">H</b>eavy <b className="bg:stripe-pink">B</b>oxes <b className="bg:stripe-pink">P</b>erform <b className="bg:stripe-pink">Q</b>uick <b className="bg:stripe-pink">W</b>altzes <b className="bg:stripe-pink">A</b>nd <b className="bg:stripe-pink">J</b>igs.</DemoP>
