--- a/website/app/[locale]/(root)/docs/markup-driven/content.mdx
+++ b/website/app/[locale]/(root)/docs/markup-driven/content.mdx
@@ -205,7 +205,7 @@ It can be elegant:
 <!-- Transition with a delay of 0.3s and timing-function "ease" -->
 <div class="~transform|.3s|ease">
 
-<!-- Use a semantic class that translates to "display: block" -->
+<!-- Use a utility class that translates to "display: block" -->
 <div class="block">
 ```
 It can be [stateful and selectable](/docs/selectors):
