--- a/website/app/[locale]/(root)/docs/migration/tailwindcss/content.mdx
+++ b/website/app/[locale]/(root)/docs/migration/tailwindcss/content.mdx
@@ -8,7 +8,7 @@ Our syntax concepts draw inspiration from [Sass](https://sass-lang.com) and [Typ
 
 ## Property differences
 
-Master provides various structured property types such as **semantics**, **abbreviations**, **shorthands**, and **symbols**, as well as automatic conversion of property unit values. For detailed usage, please refer to [Style Declarations](/docs/style-declarations).
+Master provides various structured property types such as **utilities**, **abbreviations**, **shorthands**, and **symbols**, as well as automatic conversion of property unit values. For detailed usage, please refer to [Style Declarations](/docs/style-declarations).
 
 ### Colon instead of dash
 
