--- a/website/app/[locale]/(root)/docs/style-declarations/content.mdx
+++ b/website/app/[locale]/(root)/docs/style-declarations/content.mdx
@@ -15,8 +15,8 @@
 ---
 
 ## Basic syntax
-### Semantics
-<Semantics />
+### Utilities
+<Utilities />
 
 ### Multi-style shorthands
 <MultiStyleShorthands />
