--- a/website/app/[locale]/(root)/docs/utilities/components/Overview.mdx
+++ b/website/app/[locale]/(root)/docs/utilities/components/Overview.mdx
@@ -1,6 +1,6 @@
 ```js name=master.css.js
 export default {
-    semantics: {
+    utilities: {
         show: {
             display: 'block'
         },
@@ -10,7 +10,7 @@ export default {
     }
 }
 ```
-Apply your custom semantics:
+Apply your custom utilities:
 ```html
 <div class="**show** **hide-text**" hidden></div>
 ```
