--- a/website/app/[locale]/(root)/roadmap/content.mdx
+++ b/website/app/[locale]/(root)/roadmap/content.mdx
@@ -223,7 +223,7 @@ Great, but what about framework-agnostic?
 ```html
 <button class="inline-flex bg:indigo fg:white font:14 ...">Submit</button>
 ```
-Or embrace semantics again!
+Or embrace utilities again!
 
 (i) D. Import all Master UI [styles](/docs/styles) in the configuration.
 ```js name=master.css.js
