--- a/website/i18n/tw.json
+++ b/website/i18n/tw.json
@@ -98,7 +98,7 @@
     "Responsive Design": "響應式設計",
     "Styles": "樣式 Styles",
     "Values": "代值 Values",
-    "Semantics": "語意 Semantics",
+    "Utilities": "實用 Utilities",
     "Browser Support": "瀏覽器支援",
     "Methods": "方法 Methods",
     "Compilation": "編譯",
